Hide buttongs by default, and add a short delay in showing buttons to prevent flickering

--- a/deposit/static/deposit/css/deposit.css
+++ b/deposit/static/deposit/css/deposit.css
@@ -49,9 +49,16 @@ nav .breadcrumb {
     display: inline-block;
  }
 
+.upload-pause,
+.upload-resume,
+.upload-retry {
+    display: none;
+}
+
 .hide {
     display:none;
 }
+
 
 
 /* cards clickable
